<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Le carnet : voir ce qui est enregistre et sous quels reglages. -->

    <item

        android:id="@+id/action_vault"

        android:title="@string/vault_title"

        app:showAsAction="never" />


    <!-- Enregistre les reglages du site affiche, pour ne plus avoir a les
         retenir. -->
    <item
        android:id="@+id/action_save_to_vault"
        android:title="@string/vault_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dark_mode"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/menu_dark_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help"
        app:showAsAction="ifRoom" />

</menu>
